optimized comment chatting with webSockets